--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -346,17 +346,23 @@
 
 <section id="fees" class="service-section">
   <h2 class="feature-label">Fees</h2>
+  <div class="feature-label sublabel">Scenario 1</div>
   <div class="feature-value">
-    <table>
-      <thead>
-        <tr>
-          <th>Scenario</th>
-          <th>What you pay</th>
-          <th>Notes</th>
-        </tr>
-      </thead>
-      <tbody><tr><td>Paying a €15 Lightning invoice in a café</td><td>0.4% of the amount + 4 sat</td><td>Outgoing Lightning payments include a fixed 4 sat charge plus 0.4% routing fee.</td></tr><tr><td>First €30 Lightning receive when no channel exists</td><td>≈1,000 sat channel open fee + mining fee</td><td>Phoenix opens a channel for you and charges the 1,000 sat creation fee along with the current mining fee.</td></tr><tr><td>Receiving a €200 payout after your channel fills up</td><td>1% of the amount + mining fee</td><td>Insufficient inbound liquidity triggers a splice-in with a 1% fee plus mining costs.</td></tr><tr><td>Requesting €500 inbound liquidity before a Berlin market day</td><td>1% of the requested amount + mining fee</td><td>Phoenix lets you prepay for inbound liquidity; the fee credit covers future splice-ins.</td></tr><tr><td>Withdrawing to an exchange through an on-chain swap-out</td><td>User-selected mining fee</td><td>Swap-out transactions use the feerate you choose when sending to an on-chain address.</td></tr></tbody>
-    </table>
+    <h3>Paying a €15 Lightning invoice in a café</h3>
+    <p><strong>0.4% of the amount + 4 sat</strong></p>
+    <p>Outgoing Lightning payments include a fixed 4 sat charge plus 0.4% routing fee.</p>
+  </div>
+  <div class="feature-label sublabel">Scenario 2</div>
+  <div class="feature-value">
+    <h3>First €30 Lightning receive when no channel exists</h3>
+    <p><strong>≈1,000 sat channel open fee + mining fee</strong></p>
+    <p>Phoenix opens a channel for you and charges the 1,000 sat creation fee along with the current mining fee.</p>
+  </div>
+  <div class="feature-label sublabel">Scenario 3</div>
+  <div class="feature-value">
+    <h3>Receiving a €200 payout after your channel fills up</h3>
+    <p><strong>1% of the amount + mining fee</strong></p>
+    <p>Insufficient inbound liquidity triggers a splice-in with a 1% fee plus mining costs.</p>
   </div>
 </section>
 
